src/test/deca/syntax/invalid/homemade/test/test_lex_inv_non_detection_mot_reserve.deca
// Description:
//    tests de programme incorrect lexicalement (instanceof)
//
// Resultats:
//    ligne 10 : Erreur espace 
// Historique:
//    cree le 01/01/2023

{
    prin tln("hello")
}
